Fix some layout problems, search scoping, refactor Event#browse, more bug fixes.

--- a/app/stylesheets/_forms.sass
+++ b/app/stylesheets/_forms.sass
@@ -78,4 +78,7 @@ input.placeholder,
 textarea.placeholder
   color: #aaa
 
+// Left column search box
+#keywords
+  width: 100%
 
