--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -106,14 +106,18 @@ a.button
 @import signup
 
 .category-tab-buttons
-  +horizontal-list(4px)
+  +horizontal-list(6px)
   margin-bottom: 12px
   li
-    padding: 8px 4px
+    width: $sidebar-width/2 - 6
     a
+      text-align: center
+      display: block
+      width: 100%
+      height: 100%
+      padding: 8px 0
       text-decoration: none
       border: 1px solid #ddd
-      padding: 8px 16px
       background-color: #ddd
       color: #666
       &.active
